# restor-os

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  TODOS.md  environment.md
backend/: .gitignore  CLAUDE.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/api/: config.py  main.py
backend/migrations/: 001_bootstrap.sql
backend/scripts/: pr10_round2_apply.sql  seed_mock_data.py  seed_moisture_history.py
backend/tests/: conftest.py  test_archive_status_drift.py  test_auth.py  test_closeout_service.py  test_dashboard.py  test_equipment_frozen_drift.py  test_events.py  test_floor_plans.py  test_health.py  test_jobs.py  test_jobs_service_contracts.py  test_migration_billable_days_rpcs.py  test_migration_dry_check_trigger.py  test_migration_equipment_ensure_job_mutable.py  test_migration_equipment_pin_assignments.py  test_migration_equipment_placements_table.py  test_migration_fork_restamp_equipment.py  test_migration_jobs_timezone.py  test_migration_moisture_pin_wall_segment_trigger.py  test_migration_moisture_pins_floor_plan_dry_met.py  test_migration_moisture_pins_surface_position_wall.py  test_migration_move_equipment_placement.py  test_migration_place_equipment_with_pins.py  test_migration_pr_b2_equipment_chain.py  test_migration_pr_b2_equipment_rpcs.py  test_migration_pr_b2_job_completion.py  test_migration_pr_b2_rollback.py  test_migration_reading_date_to_taken_at.py  test_migration_restamp_rooms_pins_on_fork.py  test_migration_trigger_functions.py  test_migration_validate_pins_for_assignment.py  test_moisture.py  (+12 more)
(+432 files in other folders)
